# spin-coater

./: .gitignore  CMakeLists.txt  README.md  coater_dshot.cpp  coater_dshot.h  coater_pwm.cpp  coater_pwm.h  configure.sh  dshot_encoder.cpp  dshot_encoder.h  dshot_encoder.pio  flash.sh  hello_pwm.cc  spin_coater.cc  spin_coater.h  spin_coater.py  spin_couter.cc  spin_couter.py
